--- a/www/assets/templates/campaign.html
+++ b/www/assets/templates/campaign.html
@@ -145,14 +145,37 @@
               <div class="col text-center">
                 <h3><span id="username"></span> you can help us reach the goal!</h3>
                 <h3>
-                  <a class="outline-btn outline-blue big-btn" onclick="addDonation(15)" type="button">+15!</a>
-                  <a class="outline-btn outline-purple big-btn" onclick="addDonation(50)" type="button">+50!</a>
-                  <a class="outline-btn big-btn" onclick="addDonation(100)" type="button">+100!</a>
+                  <a class="outline-btn outline-blue big-btn" onclick="addDonation(5)" type="button">+5!</a>
+                  <a class="outline-btn outline-purple big-btn" onclick="addDonation(10)" type="button">+10!</a>
+                  <a class="outline-btn big-btn" onclick="addDonation(20)" type="button">+20!</a>
                 </h3>
                 <form class="form-inline justify-content-center">
                   <input type="text" class="form-control mr-sm-2 w-50 big-input" placeholder="How much will you donate?" aria-label="donation-amount" id="donation-input" aria-describedby="basic-addon2">
                     <a class="outline-btn big-btn" onclick="donate()"type="button">Donate!</a>
                 </form>
+                <p style="font-style: italic;">Remember this donation is in the NEAR cryptocurrency. <a type="button" class="red-text" onclick="showFiatExchange()">How much is that?</a></p>
+                <div id="fiat-exchange" style="display: none">
+                  <form class="form-inline justify-content-center">
+                    <div class="input-group w-50">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text outline-btn currency-input-prepend">NEAR</span>
+                      </div>
+                      <input type="text" class="form-control currency-input" id="near-currency" placeholder=0>
+                      <input type="text" class="form-control currency-input" id="fiat-currency" placeholder=0>
+                      <div class="input-group-append">
+                        <button class="btn outline-btn dropdown-toggle currency-input-append" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">EUR</button>
+                        <div class="dropdown-menu">
+                          <a class="dropdown-item" type="button" onclick="changeFiat('eur')">EUR</a>
+                          <a class="dropdown-item" type="button" onclick="changeFiat('usd')">USD</a>
+                          <a class="dropdown-item" type="button" onclick="changeFiat('jpy')">JPY</a>
+                          <a class="dropdown-item" type="button" onclick="changeFiat('gbp')">GBP</a>
+                          <a class="dropdown-item" type="button" onclick="changeFiat('bch')">BCH</a>
+                        </div>
+                      </div>
+                    </div>
+                  </form>
+                  <a style="font-style: italic;" href="https://api.coingecko.com/api/v3/simple/price?ids=near&vs_currencies=usd,jpy,eur,gbp,bch">Exchange source</a>
+                </div>
               </div>
             </div>
           </div>  
