--- a/www/assets/templates/index.html
+++ b/www/assets/templates/index.html
@@ -159,7 +159,30 @@
                 <h3 class="mr-sm-2 my-auto">Your campaign goal</h3>
                 <input type="text" class="form-control mr-sm-2 campaign-input" placeholder="How Much?" aria-label="donation-amount" id="how-much-input" aria-describedby="basic-addon2">
               </form>
-              <p style="font-style: italic;">Remember this goal and the donations you will receive, are in the <a href="https://www.coingecko.com/en/coins/near">NEAR cryptocurrency</a>.</p><br>
+              <p style="font-style: italic;">Remember this goal and the donations you will receive, are in the NEAR cryptocurrency. <a type="button" class="red-text" onclick="showFiatExchange()">How much is that?</a></p>
+              <div id="fiat-exchange" style="display: none">
+                <form class="form-inline justify-content-center">
+                  <div class="input-group w-50">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text outline-btn currency-input-prepend">NEAR</span>
+                    </div>
+                    <input type="text" class="form-control currency-input" id="near-currency" placeholder=0>
+                    <input type="text" class="form-control currency-input" id="fiat-currency" placeholder=0>
+                    <div class="input-group-append">
+                      <button class="btn outline-btn dropdown-toggle currency-input-append" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">EUR</button>
+                      <div class="dropdown-menu">
+                        <a class="dropdown-item" type="button" onclick="changeFiat('eur')">EUR</a>
+                        <a class="dropdown-item" type="button" onclick="changeFiat('usd')">USD</a>
+                        <a class="dropdown-item" type="button" onclick="changeFiat('jpy')">JPY</a>
+                        <a class="dropdown-item" type="button" onclick="changeFiat('gbp')">GBP</a>
+                        <a class="dropdown-item" type="button" onclick="changeFiat('bch')">BCH</a>
+                      </div>
+                    </div>
+                  </div>
+                </form>
+                <a style="font-style: italic;" href="https://api.coingecko.com/api/v3/simple/price?ids=near&vs_currencies=usd,jpy,eur,gbp,bch">Exchange source</a>
+              </div>
+              <br>
               <form class="form-inline justify-content-center">
                 <h3 class="mr-sm-2 my-auto">The closing date</h3>
                 <input type="text" class="form-control mr-sm-2 campaign-input" placeholder="When?" aria-label="donation-amount" id="when-input" aria-describedby="basic-addon2">
